2010-05-27  Jeffrey Stedfast  <fejj@novell.com>

	* transform.cpp (TransformXYWithError): Fixed to take doubles
	instead of ints.

2010-05-26  Chris Toshok  <toshok@ximian.com>

	* pal/pal.h: various capture-related api fixes.

	* pal/capture/v4l2/pal-v4l2-video-capture.cpp,h: incredibly naive
	implementation of all this.  hardcodes a lot, doesn't probe
	properly, doesn't pass along unconverted data to videosinks, a
	host of problems.

	* capture.h: lots more implementation work.

	* brush.h, brush.cpp (VideoBrush): add support for using a
	CaptureSource for the source.

2010-05-14  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (XamlNamespace::FindElement): add a missing g_free, and
	no need to check for null when calling it.

2010-05-26  Jeffrey Stedfast  <fejj@novell.com>

	* runtime.cpp (EmitEventOnList): Simplified a smidge.

	* textbox.cpp (PostOnKeyDown): Use the correct event keycode so
	that Enter actually works. Fixes a slew of drts.

	* dependencyobject.cpp (Emit): Don't warn for async events.

2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* downloader.cpp: Initialize 'request' field to null.

2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* downloader.cpp: A downloader can be reused, so create the HttpRequest in
	Open and not in the constructor.

2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp|h:
	* downloader.cpp: Make HttpRequest::Send send async using tick calls. Fixes
	our media test #126 (it raises a download error event before the surface'
	loaded event otherwise).

2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* application.cpp: GetResource: add event handlers before calling Open, since
	Open might raise error events.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Readd code that got accidentally removed.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp|h: Implement a couple of TODOs I'd missed.

2010-05-25  Jeffrey Stedfast  <fejj@novell.com>
